<resources>
    <string name="app_name">BondoMan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="email_placeholder">Enter your Email</string>
    <string name="password_placeholder">Enter your Password</string>

    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_login">Invalid credentials</string>
    <string name="invalid_login_http">HTTP Error</string>
    <string name="unknown_host">Unable to Reach Server</string>
    <string name="disconnected_network">Disconnected from Server</string>

    <string name="menu_transaction">Transaction</string>
    <string name="menu_twibbon">Twibbon</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_graph">Graph</string>
    <string name="menu_settings">Settings</string>

    <string name="column_date">Tanggal</string>
    <string name="column_transaction_category">Kategori Transaksi</string>
    <string name="column_nominal">Nominal Transaksi</string>
    <string name="column_transaction_name">Nama Transaksi</string>
    <string name="column_location">Lokasi</string>

    <string name="add_location_button_description">Add your current location</string>

    <!--  Transaction string values  -->
    <string name="add_transaction_description">Add a new transaction</string>

    <string name="save_transactions_xls">Simpan Daftar Transaksi</string>
    <string name="send_transactions">Kirim Daftar Transaksi</string>
    <string name="logout">Keluar</string>

    <string name="save_transactions_success">Berhasil Tersimpan</string>
    <string name="save_transactions_fail">Gagal Tersimpan</string>

    <string name="transaction_input_title">Title</string>
    <string name="transaction_input_category">Category</string>
    <string name="transaction_input_nominal">Nominal</string>
    <string name="transaction_input_location">Location</string>
    <string name="add_transaction_button">Add Transaction</string>
    <string name="update_transaction_button">Update Transaction</string>
    <string name="delete_transaction_button">Delete Transaction</string>

    <string name="empty_field">Field must not be empty</string>
    <string name="invalid_number">Number must be a standard decimal value</string>
    <string name="invalid_positive_number">Number must not be negative</string>
    <string name="xlsx">XLSX</string>
    <string name="xls">XLS</string>
    <string name="file_format_select_text">File format:</string>
    <string name="randomize_transaksi">Randomize Transaksi</string>
    <string name="income">PEMASUKAN</string>
    <string name="expense">PENGELUARAN</string>
    <string name="take_photo">Take Photo</string>
    <string name="open_other_camera">Open Other Camera</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="twibbon_frame">Twibbon Frame</string>
    <string name="image_viewer">Image Viewer</string>


</resources>