<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/transactionFragment"
            android:icon="@drawable/transaction_item_shape"
            android:title="@string/menu_transaction" />
        <item
            android:id="@id/scanFragment"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_scan" />
        <item
            android:id="@id/graphFragment"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_graph" />
        <item
            android:id="@id/settingsFragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>