<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/edit_transaction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/transaction_input_title"
        android:hint="@string/transaction_input_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_transaction_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/transaction_input_category"
        android:hint="@string/transaction_input_category"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_transaction_nominal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/transaction_input_nominal"
        android:hint="@string/transaction_input_nominal"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edit_transaction_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/transaction_input_location"
        android:hint="@string/transaction_input_location"
        android:inputType="text" />
</LinearLayout>